@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - gearman_proxy.pl: set tcp keepalive
+
 3.0.5 Mon Jul 10 21:55:17 CEST 2017
           - fix issue with contact macros (#120 Adrian Lopez)
           - cleanup send_gearman.pl tool
